--- a/telas/vendedor-principal/css/style.css
+++ b/telas/vendedor-principal/css/style.css
@@ -73,23 +73,77 @@
 
 .painel-mobile {
   display: none;
-  width: 100%;
+}
+
+.painel-mobile-menu {
+  display: flex;
+  flex-direction: column;
+  gap: var(--espacamento-regular);
+}
+
+.painel-mobile-view {
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+}
+
+.painel-mobile-menu-vazio {
+  height: var(--espacamento-xg);
+}
+
+.card-perfil-com-nome {
+  display: flex;
+  gap: var(--espacamento-p);
+  align-items: center;
+}
+
+.legenda {
+  font-weight: 600;
+  font-size: 12px;
+}
+
+.card-distancia-menu {
+  display: flex;
+  gap: var(--espacamento-regular);
+  align-items: center;
+  z-index: 10;
+}
+
+.nao-renderizar {
+  display: none;
+}
+
+.localizacao-mobile {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 120px;
+  height: 120px;
+  left: 40%;
+  top: 35%;
+  background-color: rgba(255, 255, 255, 0.2);
+  border: 1px solid var(--cor-marca-primaria);
+  border-radius: 100%;
+  z-index: 0;
 }
 
 @media (width <= 40rem) {
 
   .painel-mobile {
-    flex-grow: 1;
     display: flex;
+    flex-grow: 1;
     flex-direction: column;
     padding: var(--espacamento-g) var(--espacamento-p);
   }
 
-  .painel-mobile-view {
-    flex-grow: 1;
-  }
-
   .navbar-desktop, .painel {
+    display: none;
+  }
+}
+
+@media (width > 40rem) {
+  .localizacao-mobile {
     display: none;
   }
 }
