--- a/telas/cliente-principal/css/style.css
+++ b/telas/cliente-principal/css/style.css
@@ -4,8 +4,7 @@
 .navbar-desktop{
     padding: var(--espacamento-g) var(--espacamento-m);
     justify-content: space-evenly;
-    background-color: var(--cor-branco-translucido);
-    opacity: 0.9;
+    background-color: rgba(255, 255, 255, 0.7);
 }
 
 .navbar-desktop-imagem{
