--- a/telas/cliente-principal/css/style.css
+++ b/telas/cliente-principal/css/style.css
@@ -2,40 +2,35 @@
   height: 100vh;
 }
 .navbar-desktop{
-    padding: var(--espacamento-g) var(--espacamento-m);
-    justify-content: space-evenly;
-    background-color: rgba(255, 255, 255, 0.7);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 1);
 }
 
 .navbar-desktop-imagem{
-  width: 122px;
-  height: 74px;
+  width: 75px;
+  height: 50px;
 }
 
-.texto-entrada-absoluto{
-  text-align: center;
-}
-
-.navbar-desktop_search input::placeholder{
-  color: var(--cor-marca-primaria);
-}
-
-.icone-tamanho-g .icone-menu .icone-borda-preta{
-  color: var(--cor-marca-primaria);
-}
+ .section-search{
+  margin: var(--espacamento-g);
+ }
 
 .iconkm-container{
   display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  flex-direction: column;
   justify-content: space-evenly;
   padding: var(--espacamento-m);
 }
 
 .iconkm-container button{
-  width: 200px;
-  height: 23px;
+  width: 50px;
+  height: 50px;
   border: none;
   cursor: pointer;
-  border-radius: 4px;
   background: none;
 }
 
@@ -45,5 +40,7 @@
   align-items: center;
   background-color: var(--cor-branco-translucido);
   padding:  2px;
+  margin-bottom: 10px ;
   border-radius: 4px;
+  border-radius: 50%;
 }
