--- a/telas/cliente-principal/css/style.css
+++ b/telas/cliente-principal/css/style.css
@@ -1,10 +1,13 @@
 .resolucao{
   height: 100vh;
+  display: flex;
+  
 }
 .imagem-web{
   height: 100vh;
 }
 .navbar-desktop{
+    width:100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -19,6 +22,9 @@
  .section-search{
   margin: var(--espacamento-g);
  }
+.user{
+  display: none;
+}
 
 .iconkm-container{
   display: flex;
@@ -26,7 +32,7 @@
   align-items: flex-end;
   flex-direction: column;
   justify-content: space-evenly;
-  padding: var(--espacamento-m);
+  padding-right: var(--espacamento-m);
 }
 
 .iconkm-container button{
@@ -53,8 +59,8 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  padding: var(--espacamento-m);
-  top: 240px;
+  padding-right: var(--espacamento-m);
+  top: 230px;
 }
 
 .centralizar button{
@@ -71,7 +77,7 @@
 
 }
 
-@media(max-width: 1050px){
+@media(max-width: 720px){
   .navbar-desktop{
     display: none;
   }
@@ -79,6 +85,38 @@
   .section-search{
     display: none;
   }
+
+  .user{
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding-left: var(--espacamento-m);
+    top:60px;
+}
+
+.icone-user{
+  margin-right:10px;
+  width: 51px;
+  height: 51px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background-color: var(--cor-fundo-secundaria);
+}
+
+.user-name{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--cor-branco-translucido);
+  width: 95px;
+  height: 1.5rem;
+  border-radius: 5px;
+  font-weight: bold;
+}
+
 
   .mobile-nav{
     position: relative;
@@ -89,12 +127,14 @@
   }
 
   .iconkm-container{
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: flex-start;
   flex-direction: column;
   justify-content: space-evenly;
   padding: var(--espacamento-m);
+  top: 60px;
   }
 
 .iconkm-container button{
