feat tela de registro concluida

--- a/telas/vendedor-tela-login/css/style.css
+++ b/telas/vendedor-tela-login/css/style.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --raio-login: 30px;
   --font-Light: 300;
   --font-Regular: 400;
@@ -91,3 +91,4 @@ a {
 .navbar-tamanho {
   width: 100%;
 }
+*/
