--- a/telas/vendedor-produtos/css/style.css
+++ b/telas/vendedor-produtos/css/style.css
@@ -78,7 +78,32 @@
 
 .pesquisa-acoes{
   padding: var(--espacamento-regular);
+  width: 1008px;
 
+}
+
+.entrada-container-filtro{
+
+  width: 717px;
+  position: relative;
+}
+
+.container-produtos{
+  display: flex;
+  width: 1008px;
+  padding: 12px;
+  gap: 16px
+
+}
+
+.item{
+  display: flex;
+  width: 329px;
+  height: 240px;
+  background-color: var(--cor-fundo-secundaria);
+  border-radius: var(--raio-extra-grande);
+  box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.35);
+  
 }
 
 .painel-mobile {
