--- a/telas/vendedor-produtos/css/style.css
+++ b/telas/vendedor-produtos/css/style.css
@@ -154,9 +154,7 @@
 .diponibilidade-row {
     width: 100%; 
     padding-bottom: 5px;
-    display: flex;
-    justify-content:space-evenly;
-    align-items: center;
+    padding: 10px;
 }
 
 .input-count{
