--- a/telas/cliente-editar-perfil/css/menu-perfil.css
+++ b/telas/cliente-editar-perfil/css/menu-perfil.css
@@ -140,3 +140,128 @@ a {
     align-items: center;
     justify-content: center;
 }
+
+.botao-sair {
+    color: var( --cor-feedback-negativo);
+}
+
+@media (min-width: 721px) {
+    .layout-mobile {
+        display: none;
+    }
+}
+
+@media (max-width: 720px) {
+    .navbar-desktop {
+        display: none;
+    }
+
+    .painel {
+        display: none;
+    }
+
+    .resolucao{
+        display: none;
+    }
+
+    .container-funcionalidades {
+        display: none;
+    }
+
+    .acoes-editar-perfil{
+        display: none;
+    }
+
+    .layout-mobile {
+        background: var(--cor-fundo-secundaria);
+        width: 100%;
+        height: 667px;
+        padding: var(--espacamento-g);
+    }
+
+    .inicio {
+        display: flex;
+        height: 20%;
+        padding-bottom: 10px;
+    }
+
+    .espacamento-texto {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-weight: var(--font-Medium);  
+        flex-direction: column;     
+        gap: 10px;
+    }
+
+     .espacamento-icone {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-right: 15px;
+        flex-direction: column;
+        gap: 10px;
+     }
+
+     .inicio1 {
+        flex-grow: 1;
+        width: 100%;
+        height: 20%;
+     }
+
+     .icone-usuario-texto { 
+        display:flex;                
+        gap: 10px; 
+     }
+
+     .centralizar {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 10px;
+        margin-top: 40px;
+        
+    }   
+
+    .espacamento-itens {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+    }
+
+    .espacamento-itens .item {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        padding: 12px 0;
+    }
+
+    .icone-seta {
+        display: flex;
+        align-items: center;
+        margin-left: 116px;
+    }
+
+    .icone-seta1 {
+        display: flex;
+        align-items: center;
+        margin-left: 100px;
+    }
+
+    .icone-seta2 {
+        display: flex;
+        align-items: center;
+        margin-left: 80px;
+    }
+
+    .botao-sair {
+        color: var( --cor-feedback-negativo);
+    }
+
+    .centralizar-sair {
+        display: flex;
+        margin-top: 140px;
+        justify-content: center;
+    }
+}
+  
