--- a/telas/cliente-editar-perfil/css/ajuda-suporte.css
+++ b/telas/cliente-editar-perfil/css/ajuda-suporte.css
@@ -102,6 +102,7 @@
     font-weight: 600;
     border-bottom: 1px solid #e5e5e5;
     margin-bottom: 20px;
+    width: 100%;
 }
 
 .chat-mensagens {
@@ -113,11 +114,14 @@
 .chat-input-area {
     display: flex;
     align-items: center;
-    padding-top: 16px;
-    border-top: 1px solid #eee;
+    padding: 8px 16px;
+    border: 0.5px solid black;
     gap: 12px;
+    width: 100%;
+    border-radius: 9999px;
 }
 
 .chat-input {
     flex: 1;
+    border: none;
 }
